# SIMRS-Khanza

./: .gitignore  AI_GUIDE.md  CODEBASE_GUIDE.md  DATABASE_OPTIMIZATION.md  TABLES_REFERENCE.md
simrs-tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
simrs-tauri/src/: App.tsx  index.css  main.tsx
simrs-tauri/src-tauri/: Cargo.toml  tauri.conf.json
simrs-tauri/src-tauri/src/: lib.rs  main.rs
simrs-tauri/src-tauri/src/database/: connection.rs  mod.rs  repository.rs
simrs-tauri/src-tauri/src/handlers/: dashboard.rs  mod.rs  pasien.rs  registrasi.rs  settings.rs
simrs-tauri/src-tauri/src/models/: dokter.rs  mod.rs  obat.rs  pasien.rs  poliklinik.rs  registrasi.rs
simrs-tauri/src-tauri/src/services/: auth.rs  bpjs.rs  encryption.rs  mod.rs  satusehat.rs
simrs-tauri/src-tauri/src/utils/: crypto.rs  formatting.rs  mod.rs  validation.rs
simrs-tauri/src/components/: Header.css  Header.tsx  Sidebar.css  Sidebar.tsx
simrs-tauri/src/pages/: Dashboard.css  Dashboard.tsx
simrs-tauri/src/styles/: index.css
