[package]
name = "simrs-khanza"
version = "1.0.0"
description = "Sistem Informasi Manajemen Rumah Sakit - Khanza (Tauri Version)"
authors = ["SIMRS Khanza Team"]
edition = "2021"

[lib]
name = "simrs_khanza_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
regex = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"